--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "chai": "^4.2.0",
+    "eslint": "^6.2.2",
     "file-system": "^2.2.2",
     "jsdom": "^9.0",
     "mocha": "^5.2.0",
